Resources/CSS/style.css
html {
  font-size: 16px;
}

body {
  font-family: verdana;
}

/* Header */

header {
  display: flex;
  align-items: center;
  width: 100%;
  height: 4rem;
  border-bottom: 1px solid black;
}

.logo {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding-left: 1.5rem;
}

.logo img {
  width: 4.375rem;
  height: 3.75rem;
  margin-right: 0.75rem;
}

.logo span {
  color: lightblue;
  font-size: 2rem;
}

header nav {
  padding-right: 2.5rem;
}

nav span {
  display: inline-block;
  padding: 20px 10px;
}

 .mobile {
  display: none;
}

@media only screen and (max-width: 560px) {
  .mobile {
    display: inline-block;
    width: 100%;
  }

.mobile img {
  padding: 0 2rem;
}
  nav span,
  .logo {
    display: none;
  }
}



/*main banner*/
.container {
  display: flex;
  justify-content: space-between;
  margin: 2rem;
  background-color: purple;
}

.container .text-main {
  width: 65%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 25% 2rem;
  line-height: 2.5rem;
}


.left {
  background-color: pink;
  width: 60%
}

 .left img {
  width: 100%;
}

.left,
  .right {
  display: flex;
  flex-direction: column;
}

.right {
  background-color: lightblue;
  width: 40%;
}

 .text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 1.5rem;
}

.right span {
  font-size: 1.5rem;
}

.button {
  padding: 8px;
  background-color: grey;
  font-size: 1rem;
}

.small {
  display: none;
}

@media only screen and (max-width: 560px) {
  .container {
   display: none;
  }

.small {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.small .text-main {
  margin: 1rem;
  max-width: 85%;
}

.text-main h1 {
  padding: 1rem
}
}

/*events*/
.event img {
  width: 35%;
  height: auto;
  padding: 16px;
  float: left;
}

.small img {
  max-width: 100%;
}
.event {
  border: 1px solid black;
}

@media only screen and (max-width: 560px) {
  .small .event {
    border: none;
  }

  .small img {
    padding: 1rem;
  }
}
/*courses*/
.top {
  text-align: center;
  background-color: yellow;
  padding: 2rem;
}

.courses {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 4rem;
}

.course img {
  display: block;
  height: auto;
  width: 300px;
  padding: 10px;
}

.course {
  justify-content: center;
  width: 300px;
  margin: 0 2rem;
}

@media only screen and (max-width: 560px) {
  .top {
    padding: 2rem 0 1rem 0;
  }
  .courses {
    display: none;
  }

  .bites {
    margin: 1rem 0 2rem 0;
  }
   .bite {
    display: block;
    padding: 1rem 1rem 1.5rem 1rem;
    background-color: whitesmoke;
    text-align: left;
    margin: 0.5rem;
  }

}
/*thesis*/
.container video {
 max-width: 100%;
}

@media only screen and (max-width: 560px) {
   video {
    display: flex;
    max-width: 100%;
    margin: none;
  }
}
/*footer*/
footer {
 display: flex;
 text-align: center;
 border-top: 1px solid black;
 background-color: lightgreen;
 justify-content: space-between;
 margin: 32px;
 padding: 10px;
}

footer .legal {
 display: inline-block;
 padding-right: 40px;
}

footer span {
 padding: 10px;
}

 @media only screen and (max-width: 560px) {
 footer .legal {
     display: none;
   }

 footer {
     border: none;
     max-width: 100%;
   }
 }

